--- a/index.html
+++ b/index.html
@@ -355,5 +355,7 @@
     </script>
     <script async="async" data-cfasync="false" src="//pl27356073.profitableratecpm.com/3c47676d8eb066e0b60d43e312679679/invoke.js"></script>
 <div id="container-3c47676d8eb066e0b60d43e312679679"></div>
+
+	<script type='text/javascript' src='//pl27356814.profitableratecpm.com/6f/e2/75/6fe275bda60717e5d55020ec237d6210.js'></script>
 </body>
 </html>
