--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <div class="channel-name">Fake Zone 😋</div>
                 <p>Join our fun and entertaining channel for amazing content!</p>
             </div>
-            <a href="https://t.me/+kvIGh4JyP_QzZjY9" class="join-btn" target="_blank">Join Now</a>
+            <a href="https://www.profitableratecpm.com/k9tre7wa6?key=a994cffd2174df916d9da455afd2d29a" class="join-btn" target="_blank">Join Now</a>
         </div>
 
 
@@ -238,7 +238,7 @@
                 <div class="channel-name">🔥Fire Zone🔥</div>
                 <p>Hot trending content and discussions - don't miss out!</p>
             </div>
-            <a href="https://t.me/+8DLR2OBTaBdiMjM1" class="join-btn" target="_blank">Join Now</a>
+            <a href="https://www.profitableratecpm.com/k9tre7wa6?key=a994cffd2174df916d9da455afd2d29a" class="join-btn" target="_blank">Join Now</a>
         </div>
 
 
